# StelaKey

./: .env.example  .gitignore  .vercelignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  turbo.json
apps/prover/: package.json
apps/prover/src/: server.ts
apps/relayer/: package.json
apps/relayer/src/: server.ts
apps/web/: .vercelignore  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/account/: page.tsx
apps/web/components/: account-setup.tsx  app-shell.tsx  brand-logo.tsx  landing-wallet-actions.tsx  product-icon.tsx  status-toast.tsx  transfer-flow.tsx  wallet-connect-button.tsx  wallet-notice-toast.tsx  wallet-session.tsx
apps/web/lib/: account-funding.ts  activity-events.ts  deployment.ts  owner.ts  prover-crypto.ts  prover-service.ts  transfer-relayer.ts
apps/web/scripts/: copy-bbjs-assets.mjs  install-prover-tools.mjs
circuits/circom_experiment/: README.md
circuits/risc0_fallback/: README.md
circuits/stelakey_auth/: Nargo.toml  README.md
circuits/stelakey_auth/src/: main.nr
contracts/account/: Cargo.toml
contracts/account/src/: lib.rs
contracts/deployer/: Cargo.toml
contracts/deployer/src/: lib.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
crates/ultrahonk-soroban-verifier/: VERIFIER_PROVENANCE.md
deployments/: testnet.json
docs/: PRD.md  finish-readiness.md  live-state-rules.md  protocol.md
scripts/: build-circuit.sh  build-contracts.sh  deploy-testnet.sh  gen-bindings.sh
(+18 files in other folders)
